--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,10 @@
             <artifactId>xmldb-api</artifactId>
             <version>20021118</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+        </dependency>
     </dependencies>
-
-
 </project>
